--- a/model.Rmd
+++ b/model.Rmd
@@ -15,7 +15,7 @@ knitr::opts_chunk$set(warning = FALSE, message = FALSE)
 
 Last Update: `r Sys.time()`
 
-# Libraries {.tabset} {.tabset-fade}
+# Libraries
 
 Before we start, let's load a few libraries.
 
@@ -33,3 +33,57 @@ registerDoParallel(cores = (detectCores() - 1))
 ```
 
 With our libraries loaded we can start loading our data.
+
+# Data Loading
+
+Let's read in our data.
+
+```{r read_csv}
+data.2015 = read.csv("data/2015.csv")
+data.2016 = read.csv("data/2016.csv")
+data.2017 = read.csv("data/2017.csv")
+data.2018 = read.csv("data/2018.csv")
+```
+
+Now, we will only deal with regular season events. So let's remove the playoffs from our datasets.
+
+```{r remove_playoffs}
+get.regular.season = function(data) {
+	subset(data, isPlayoffGame == 0)
+}
+
+season.2015 = get.regular.season(data.2015)
+season.2016 = get.regular.season(data.2016)
+season.2017 = get.regular.season(data.2017)
+season.2018 = get.regular.season(data.2018)
+```
+
+Here is a table of all the columns we shall keep and what we shall rename them to.
+
+| Old Column Name | New Column Name |
+| --------------- | --------------- |
+| Old Column Name | New Column Name |
+| --------------- | --------------- |
+| `xCordAdjusted` | `x` |
+| `yCordAdjusted` | `y` |
+| `shotAngleAdjusted` | `angle` |
+| `shotDistance` | `dist` |
+| `teamCode` | `team` |
+| `shooterName` | `shooter` |
+| `shotType` | `type` |
+| `goalieNameForShot` | `goalie` |
+| `goal` | `goal` |
+
+```{r get_helpful_data}
+get.helpful.data = function(data) {
+	data.frame(x = data$xCordAdjusted,
+			   y = data$yCordAdjusted,
+			   angle = data$shotAngleAdjusted,
+			   dist = data$shotDistance,
+			   type = data$shotType,
+			   goal = data$goal,
+			   team = data$teamCode,
+			   shooter = data$shooterName,
+			   goalie = data$goalieNameForShot)
+}
+```
