render from any changes from last night

--- a/model.Rmd
+++ b/model.Rmd
@@ -191,3 +191,7 @@ model.knn = train(goal ~ . -goal -team -shooter -goalie,
 				  method = "knn",
 				  trControl = control)
 ```
+
+Now our models have been made.
+
+# Testing the Models
